Fixed spacing of nested menu toggle

--- a/src/assetbundles/src/main.scss
+++ b/src/assetbundles/src/main.scss
@@ -152,10 +152,10 @@ body.rtl .buttons-spooned > .btn, body.rtl .buttons-spooned > .btngroup { margin
 }
 
 body.ltr .spoon-settings-menu a.fieldtoggle:before {
-    left: -12px;
+    left: -7px;
 }
 body.rtl .spoon-settings-menu a.fieldtoggle:before {
-    right: -12px;
+    right: -7px;
 }
 
 
